--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                     <div class="btn-container">
                         <button 
                             class="btn btn-color-2 project-btn" 
-                            onclick="location.href='https://github.com/utsav7parmar/'">
+                            onclick="location.href='https://github.com/utsav7parmar/Utsav_Portfolio'">
                             GitHub
                         </button>
                         <button 
