--- a/index.html
+++ b/index.html
@@ -309,11 +309,10 @@
                         </article>
                     </div>
                 </div>
-                <div>
-                    <div class="details-container">
-                        <h2 class="experience-sub-title">Certificates</h2>
-                        <div class="article-container">
-                            <article>
+                <div class="details-container">
+                    <h2 class="experience-sub-title">Certificates and Research</h2>
+                    <div class="article-container">
+                        <article>
                                 <img 
                                     src="./assets/link-flat-on-transparent-background-free-png.webp" 
                                     alt="Experience icon"
@@ -322,8 +321,8 @@
                                 <div>
                                     <h3><a href="https://www.credly.com/badges/82a5d4ca-14c3-4e0d-98fa-80dc67392861/public_url">AWS Cloud Foundation</a></h3>
                                 </div>
-                            </article>
-                            <article>
+                        </article>
+                        <article>
                                 <img 
                                     src="./assets/link-flat-on-transparent-background-free-png.webp" 
                                     alt="Experience icon"
@@ -332,8 +331,8 @@
                                 <div>
                                     <h3><a href="https://www.credly.com/badges/ed10b9dd-928e-4200-a8f9-aea2c73cf4a2/public_url">AWS Machine Learning</a></h3>
                                 </div>
-                            </article>
-                            <article>
+                        </article>
+                        <article>
                                 <img 
                                     src="./assets/link-flat-on-transparent-background-free-png.webp" 
                                     alt="Experience icon"
@@ -342,8 +341,8 @@
                                 <div>
                                     <h3><a href="https://coursera.org/share/677c9daf7973f6e393adcb31356b0b99">Python Programming</a></h3>
                                 </div>
-                            </article>
-                            <article>
+                        </article>
+                        <article>
                                 <img 
                                     src="./assets/link-flat-on-transparent-background-free-png.webp" 
                                     alt="Experience icon"
@@ -352,24 +351,16 @@
                                 <div>
                                     <h3><a href="https://coursera.org/share/245ba03d9abfbd00fc964f9c67abd764">Version Control</a></h3>
                                 </div>
-                            </article>
-                        </div>
-                    </div>
-                    <br/>
-                    <br/>
-                    <div class="details-container">
-                        <h2 class="experience-sub-title">Research Papers</h2>
-                        <div class="article-container">
-                            <article>
+                        </article>
+                        <article>
                                 <img 
                                     src="./assets/link-flat-on-transparent-background-free-png.webp" 
                                     alt="Experience icon"
                                     class="icon"
                                 />
                                 <h3><a href="https://ijrpr.com/uploads/V6ISSUE10/IJRPR53640.pdf">Breast Cancer</a></h3>
-                            </article>
-                        </div>
-                    </div>
+                        </article>
+                    </div>                       
                 </div>
             </div>
         </div>
@@ -390,7 +381,6 @@
                     <div class="article-container">
                         <img 
                             src="./assets/image.png" 
-                            style="height: 300px; width: fit-content;"
                             alt="Project 1"
                             class="project-img"
                         />
@@ -413,7 +403,6 @@
                     <div class="article-container">
                         <img 
                             src="./assets/BCUKNN.jpg" 
-                            style="height: 300px; width: fit-content;"
                             alt="Project 2"
                             class="project-img"
                         />
