--- a/index.html
+++ b/index.html
@@ -528,6 +528,11 @@
                 </p>
             </div>
         </div>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfh8Z7pHuhV0jnHnvr_S1qK9ExhuMJhw4A1SJUEh4im10_5XA/viewform?usp=preview">Suggestions</a>
+            </div>
+        </div>
         <img 
             src="./assets/up-arrow.png" 
             alt="Arrow icon" 
