--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title">Utsav Parmar</h1>
-            <p class="section__text__p2">Fresher AI/ML Engineer</p>
+            <p class="section__text__p2">Fresher Graduate</p>
             <div class="btn-container">
                 <button 
                     class="btn btn-color-2" 
-                    onclick="window.open('./assets/Utsav_SoftwareEngineer_Resume.pdf')"
+                    onclick="window.open('./assets/Utsav_Resume.pdf')"
                 >
                 Download CV
                 </button>
@@ -112,7 +112,7 @@
                 </div>
                 <div class="text-container">
                     <p style="text-align: justify;">
-                        Aspiring for the Software Engineer role and Machine Learning Engineer role, currently in my final year of a Bachelor's in Computer Engineering with a diploma background. Skilled in Python, Java, C, C++, and PHP, with hands-on experience in version control (Git/GitHub) and a solid foundation in AWS cloud and machine learning concepts. Passionate about building intelligent, data-driven solutions that solve real-world problems. Actively seeking an internship or entry-level opportunity to apply my skills, learn from real projects, and grow into a well-rounded engineer at the intersection of software development and ML model development.
+                        Final-year Computer Engineering student with a strong diploma background and a rising knowledge spanning Python, Java, C, C++, PHP, and current programming tools.  With a background in Git/GitHub, AWS principles, and machine learning, I'm dedicated to developing dependable, data-driven solutions that provide value at scale.  I'm now looking for an internship or entry-level position where I can work with top teams in the industry, contribute to real-world projects, and grow into a well-rounded software and machine learning engineer.
                     </p>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                                 <h3>Computer Engineering</h3>
                                 <p>accredited by NBA</p>
                                 <br/>
-                                <h3>Cumulative Grade Point Average<p>CGPA: 7.23/10</p></h3>
+                                <h3>FIRST CLASS WITH DISTINCTION-PASSED</h3>
                                 <p>2020-2023</p>
                             </div>
                         <!-- </article> -->
@@ -400,14 +400,6 @@
                                     alt="Experience icon"
                                     class="icon"
                                 />
-                                <h3><a href="https://ijrpr.com/uploads/V6ISSUE10/IJRPR53640.pdf">Breast Cancer</a></h3>
-                        </article>
-                        <article>
-                                <img 
-                                    src="./assets/link-flat-on-transparent-background-free-png.webp" 
-                                    alt="Experience icon"
-                                    class="icon"
-                                />
                                 <h3><a href="assets/SSIP Hackathon.jpg">SSIP Hack Participation</a></h3>
                         </article>
                     </div>                       
@@ -440,12 +432,12 @@
                         <button 
                             class="btn btn-color-2 project-btn" 
                             onclick="location.href='https://github.com/utsav7parmar/Utsav_Portfolio'">
-                            GitHub
+                            Code
                         </button>
                         <button 
                             class="btn btn-color-2 project-btn" 
                             onclick="location.href='https://utsavnparmar.netlify.app/'">
-                            Website
+                            Live
                         </button>
                     </div>
                 </div>
@@ -462,13 +454,13 @@
                         <button 
                             class="btn btn-color-2 project-btn" 
                             onclick="location.href='https://colab.research.google.com/drive/1eTRfDlD0R1OEBXH2JhFWJUlHiHvFW9cF#scrollTo=U6NL0e6W8a4A'">
-                            Collab
+                            Work
                         </button>
-                        <!-- <button 
+                        <button 
                             class="btn btn-color-2 project-btn" 
-                            onclick="location.href='https://colab.research.google.com/drive/1eTRfDlD0R1OEBXH2JhFWJUlHiHvFW9cF#scrollTo=U6NL0e6W8a4A'">
-                            
-                        </button> -->
+                            onclick="location.href='https://ijrpr.com/uploads/V6ISSUE10/IJRPR53640.pdf'">
+                            Published Paper
+                        </button>
                     </div>
                 </div>
                 <!-- <div class="details-container color-container">
@@ -564,9 +556,9 @@
                 <a href="mailto:utsavparmar7749@gmail.com" aria-label="Email">
                     <i class="fas fa-envelope" style="font-size: 2.5rem;"></i>
                 </a>
-                <a href="https://leetcode.com/u/Utsav794/" target="_blank" aria-label="LeetCode">
+                <!-- <a href="https://leetcode.com/u/Utsav794/" target="_blank" aria-label="LeetCode">
                     <i class="fas fa-code" style="font-size: 2.5rem;"></i>
-                </a>
+                </a> -->
             </div>
         </nav>
         <p>Copyright &#169; 2025 Utsav Parmar. All Rights Reserved.</p>
