--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
                         <button 
                             class="btn btn-color-2 project-btn" 
                             onclick="location.href='https://ijrpr.com/uploads/V6ISSUE10/IJRPR53640.pdf'">
-                            Published Paper
+                            Published
                         </button>
                     </div>
                 </div>
