--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 <h3>Computer Engineering</h3>
                                 <p>accredited by NBA</p>
                                 <br/>
-                                <h3>FIRST CLASS WITH DISTINCTION-PASSED</h3>
+                                <h3><p>FIRST CLASS WITH DISTINCTION-PASSED</p></h3>
                                 <p>2020-2023</p>
                             </div>
                         <!-- </article> -->
@@ -352,7 +352,7 @@
                         </article>
                     </div>
                     <!-- certificates and research papers -->
-                    <h2 class="experience-sub-title">Certificates and Research</h2>
+                    <h2 class="experience-sub-title">Certificates</h2>
                     <div class="article-container">
                         <article>
                                 <img 
@@ -400,7 +400,7 @@
                                     alt="Experience icon"
                                     class="icon"
                                 />
-                                <h3><a href="assets/SSIP Hackathon.jpg">SSIP Hack Participation</a></h3>
+                                <h3><a href="assets/SSIP Hackathon.jpg">Hackathon Participation</a></h3>
                         </article>
                     </div>                       
                 </div>
