--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 <h3>Computer Engineering</h3>
                                 <p>accredited by NBA</p>
                                 <br/>
-                                <h3><p>FIRST CLASS WITH DISTINCTION-PASSED</p></h3>
+                                <h3>Grade<p>FIRST CLASS WITH DISTINCTION-PASSED</p></h3>
                                 <p>2020-2023</p>
                             </div>
                         <!-- </article> -->
