--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <!-- experience section -->
     <section id="experience">
         <p class="section__text__p1">Explore My</p>
-        <h1 class="title">Experience</h1>
+        <h1 class="title">Knowledge & Skills</h1>
         <div class="experience-details-container">
             <div class="about-containers">
                 <div class="details-container">
@@ -463,6 +463,28 @@
                         </button>
                     </div>
                 </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                            src="./assets/comingsoon.jpg" 
+                            alt="Project 3"
+                            class="project-img"
+                        />
+                    </div>
+                    <h2 class="experience-sub-title project-title">MerchMint E-Commerce</h2>
+                    <div class="btn-container">
+                        <button 
+                            class="btn btn-color-2 project-btn" 
+                            onclick="location.href='#'">
+                            Code
+                        </button>
+                        <button 
+                            class="btn btn-color-2 project-btn" 
+                            onclick="location.href='#'">
+                            Live  
+                        </button>
+                    </div>
+                </div>
                 <!-- <div class="details-container color-container">
                     <div class="article-container">
                         <img 
@@ -561,7 +583,7 @@
                 </a> -->
             </div>
         </nav>
-        <p>Copyright &#169; 2025 Utsav Parmar. All Rights Reserved.</p>
+        <p>Copyright &#169; 2026 Utsav Parmar. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
