--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                             class="project-img"
                         />
                     </div>
-                    <h2 class="experience-sub-title project-title">Portfolio</h2>
+                    <h2 class="experience-sub-title project-title">Personal Portfolio</h2>
                     <div class="btn-container">
                         <button 
                             class="btn btn-color-2 project-btn" 
@@ -471,7 +471,7 @@
                             class="project-img"
                         />
                     </div>
-                    <h2 class="experience-sub-title project-title">MerchMint E-Commerce</h2>
+                    <h2 class="experience-sub-title project-title">MerchMint E-commerce</h2>
                     <div class="btn-container">
                         <button 
                             class="btn btn-color-2 project-btn" 
